Updates to the CTA Tiles to ensure images stretch 100%; fix px to use px-to-rem

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -2548,6 +2548,8 @@ textarea {
   padding-bottom: 3.125rem;
   padding-left: 1.875rem;
   margin-top: 1.5rem; }
+  .panel:first-child {
+    margin-top: 3rem; }
   @media (min-width: 56.25rem) {
     .panel {
       padding-top: 3.125rem;
@@ -2567,8 +2569,6 @@ textarea {
       text-align: center; }
     .panel__title--form {
       margin-bottom: 1.6875rem; }
-  .panel--academic {
-    margin-top: 3rem; }
   .panel--quicklinks {
     display: none; }
     @media (min-width: 56.25rem) {
@@ -3218,7 +3218,7 @@ textarea {
   margin-bottom: 1.5rem; }
 
 .ctaTile {
-  height: 400px;
+  height: 25rem;
   width: 100%;
   display: table;
   background-size: cover;
@@ -3230,7 +3230,7 @@ textarea {
       background: rgba(0, 0, 0, 0.3);
       cursor: pointer; }
       .ctaTile__wrapper:hover .ctaTile__text {
-        top: 300px; }
+        top: 18.75rem; }
       .ctaTile__wrapper:hover .ctaTile__text p {
         opacity: 1; }
   .ctaTile__header {
@@ -3241,7 +3241,7 @@ textarea {
   .ctaTile__content {
     position: relative;
     display: table-cell;
-    height: 400px; }
+    height: 25rem; }
   .ctaTile__name {
     color: white;
     text-transform: uppercase;
@@ -3250,7 +3250,7 @@ textarea {
     font-weight: 500; }
   .ctaTile__text {
     position: absolute;
-    top: 332px;
+    top: 20.75rem;
     padding-right: 2rem;
     padding-left: 2rem;
     -webkit-transition: all 450ms ease-in-out;
